--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-title: 读立写生
+title: 四木成森
 header-img: "img/green.jpg"
 tagline: "cn"  
-description: "陈素封|读而立·写而生"  
+description: "李森|不仅仅是一个程序员"  
 baseurl: ""
-url: "http://cnfeat"  
+url: "http://lisentoday"  
 
 # About/contact
 owner: 
-  name: " CnFeat"
-  email: CnFeat@gmail.com
-  bio: "写就是写的报酬"
+  name: "lisen"
+  email: lisencn11@gmail.com
+  bio: "知识让人生更充实"
 
 # Data
 gavatar: http://dreamofbook.qiniudn.com/Az..png
