--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ zhihu_username:
 # document: http://jekyllrb.com/docs/configuration/#kramdown  
 markdown: kramdown
 kramdown: 
-  input:GFM
+  # input:GFM
 highlighter: rouge
 permalink: pretty
 paginate: 8
